@@ -4,6 +4,7 @@ import io.github.olib963.javatest.JavaTest;
 import io.github.olib963.javatest.TestSuiteClass;
 import io.github.olib963.javatest.Testable;
 
+import java.util.List;
 import java.util.stream.Stream;
 
 import static io.github.olib963.javatest.JavaTest.*;
@@ -20,7 +21,7 @@ public class SimpleTests implements TestSuiteClass {
                     var result = run(fixtureRunner(
                             "string fixture",
                             definitionFromFunction(() -> Success("fixture")),
-                            s -> testableRunner(Stream.of(
+                            s -> testableRunner(List.of(
                                     test("Testing with " + s, () -> that(true, "this test should pass"))
                             ))
                     ));
@@ -32,7 +33,7 @@ public class SimpleTests implements TestSuiteClass {
                     var result = run(fixtureRunner(
                             "fail to create",
                             definitionFromFunction(() -> Failure("Could not create fixture")),
-                            s -> testableRunner(Stream.of(
+                            s -> testableRunner(List.of(
                                     test("Testing with " + s, () -> that(true, "this test should pass"))
                             ))
                     ));
@@ -44,7 +45,7 @@ public class SimpleTests implements TestSuiteClass {
                     var result = run(fixtureRunner(
                             "fail to destroy",
                             definitionFromFunctions(() -> Success("fixture"), s -> Failure("Could not destroy fixture")),
-                            s -> testableRunner(Stream.of(
+                            s -> testableRunner(List.of(
                                     test("Testing with " + s, () -> that(true, "this test should pass"))
                             ))
                     ));
@@ -56,7 +57,7 @@ public class SimpleTests implements TestSuiteClass {
                     var result = run(fixtureRunner(
                             "test failures",
                             definitionFromFunction(() -> Success("fixture")),
-                            s -> testableRunner(Stream.of(
+                            s -> testableRunner(List.of(
                                     test("Testing with " + s, () -> that(false, "this test should fail"))
                             ))
                     ));
