@@ -3,7 +3,7 @@ package io.github.olib963.javatest.junit;
 import io.github.olib963.javatest.JavaTest;
 import io.github.olib963.javatest.junit.documentation.JUnitRunners;
 
-import java.util.stream.Stream;
+import java.util.List;
 
 import static io.github.olib963.javatest.JavaTest.test;
 import static io.github.olib963.javatest.JavaTest.that;
@@ -11,7 +11,7 @@ import static io.github.olib963.javatest.JavaTest.that;
 public class Tests {
 
     public static void main(String... args) {
-        var result = JavaTest.runTests(Stream.of(
+        var result = JavaTest.runTests(List.of(
                 test("Passing tests pass", () -> {
                     var r = JavaTest.run(JUnitTestRunner.fromPackage("io.github.olib963.javatest.junit.passing"));
                     return that(r.succeeded, "Passing tests should have passed");
