@@ -13,6 +13,7 @@ All notable changes to this project will be documented in this file.
 * Ability to prefix `MatcherAssertion` descriptions with custom messaging.
 * Ability to fail a `TestResults` object at run level not just test level.
 * Module to wrap JavaTest in more scala-usable syntax
+* Lazy and eager test runners
 
 === Changed
 
@@ -24,6 +25,7 @@ All notable changes to this project will be documented in this file.
 * Handle suite results and single test results separately
 * `TestResults` aggregation - split logs for the run into their own list.
 * Rename `TestResults.init` to `TestResults.empty`
+* Default runner to be eager runner
 
 === Removed
 
